# engineers-guide-to-data-analysis

./: percentiles.py  synthetic.ipynb
.github/workflows/: presentation.yml
apps/metrics-gen/: README.md  gen-demo-metrics.py  instruments_example.py  otel_init_example.py  pyproject.toml  server.py  sim.py
docs/: design-cheatsheet.md  graph-cheatsheet.md
docs/main/: package-lock.json  package.json  slides.md  style.css
infra/: collector-config.yaml  compose.yaml  grafana-provisioning-victoriametrics.yaml  grafana.ini  percentiles.py
