[project]
name = "metrics-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "opentelemetry-exporter-otlp>=1.28.1",
    "opentelemetry-sdk>=1.28.1",
    "psutil>=6.0.0",
    "scipy>=1.14.1",
    "statsd>=4.0.1",
]
